--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <p>Graphics: NVIDIA GTX 660 2GB / AMD HD 7870 2GB.</p>
             <p>Processor: Intel Core i5 3470 @ 3.2GHz (4 CPUs) / AMD X8 FX-8350 @ 4GHz (8 CPUs)</p>
             <p>OS: Windows 10 64 Bit, Windows 8.1 64 Bit, Windows 8 64 Bit, Windows 7 64 Bit Service Pack 1.</p></div>
-        <div class="right"><a href="http://download1.chilltime.pk/data2/GAMES%20COLLECITON/ActionGames/GTA_5.zip" class="download">Download</a></div>
+       <button class="download-button" data-download-link="http://download.chilltime.pk/drive11/Games/Strategy/HelloNeighbor2.rar">Download</button>
+
     </div>
         <div class="container">
             <div class="left"><img src="http://coolmasti.pk/uploads/games/Action/df6edce7ce7820e0aa8f208e937d71fc.jpg" alt="" srcset=""></div>
