--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <p>PIXEL SHADER: 5.0</p>
                 <p>VERTEX SHADER: 5.0</p>
                 <p>OS: Windows 10</p></div>
-         <div class="right" id="right"><a data-download-link="http://download.chilltime.pk/drive11/Games/Strategy/HelloNeighbor2.rar">Download</a></div>
+        <button class="download-button" data-download-link="http://download.chilltime.pk/drive11/Games/Strategy/HelloNeighbor2.rar">Download</button>
+
     </div>
     <div class="container">
         <div class="left"><img src="http://coolmasti.pk/uploads/games/Action/fb366e2da7b46d35e496ef675018d3ec.jpg" alt="" srcset=""></div>
